Replace sbt-launcher with the latest (1.2.1)